# claude-skills

./: .gitignore  CLAUDE.md  README.md  fable.md
.claude-plugin/: marketplace.json  plugin.json
docs/: skill-conventions.md
exa/: pyproject.toml
initiatives/: seo-aeo-launch-toolkit.md
initiatives/dev-flow-provenance-2026-06-15/: PROVENANCE.md  goto-project.local-copy.md  proof-canvas.local-copy.md  ship-it.local-claude-dir-copy.md
scripts/: build-marketplace.ts
scripts/shared/: dataforseo.py
skills/aeo-monitor/: README.md  SKILL.md
skills/ai-crawler-report/: SKILL.md  cli.py
skills/article-to-video/: SKILL.md  cli.py  package.json  pnpm-lock.yaml  tsconfig.json
skills/brand-copy/: SKILL.md
skills/brand-copy-landing/: SKILL.md
skills/brand-design/: SKILL.md
skills/claude-fm/: SKILL.md  music-toggle.sh
skills/cloudflare-tunnel-portless/: SKILL.md  dev.sh  doctor.sh  expo-qa.sh  metro-takeover.sh  pubproxy.js
skills/comms-notion/: SKILL.md  cli.py
skills/comms-slack/: SKILL.md  slack_search.py
skills/comms-whatsapp/: SKILL.md
skills/daily-digest/: SKILL.md
skills/data-digest/: SKILL.md  daily_digest.py
skills/dev-expo/: SKILL.md
skills/dev-flow/: SKILL.md  dev-flow.sh  workflow.schema.json  workflow.template.json
skills/dev-up/: dev.sh  (+8 more)
skills/haro-pitch/: SKILL.md  cli.py  pyproject.toml
skills/haro-pitch/cli/: filter.py  queue.py  report.py
skills/haro-pitch/fixtures/: sample-queries.json
skills/video-distribute/: SKILL.md  cli.py  pyproject.toml
skills/video-distribute/cli/: auth.py  manifest.py  thumbnail.py  youtube.py
(+204 files in other folders)
