[project]
name = "video-distribute"
version = "0.1.0"
description = "YouTube-first distribution for rendered explainer videos."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.0",
    "google-genai>=0.3",
    "Pillow>=10.0",
]
